# arka

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  STATUS.md  config.example.yaml  config.examples.csv-seeds.yaml  config.examples.dedup-quality.yaml  config.examples.evol-instruct.yaml  config.examples.pdf-grounded.yaml  config.examples.resume-openrouter.yaml  config.examples.verify-openrouter.yaml  config.openrouter.yaml  config.smoke.yaml  justfile  mock_llm.py  plan.md  pyproject.toml  test_cli.py  test_exclude.py  test_exclude_newer.py  test_json_enc.py  test_json_enc2.py  test_override.py  test_secret.py
.agents/: napkin.md
.jules/: bolt.md  sentinel.md
docs/: PLAN.md  README.md  SCOPE.md  SPEC.md  config-examples.md  configuration.md  features.md  rl-data-needed.md  validation-matrix.md
docs/decisions/: 0001-boundary-modeling.md  0002-simula-adoption.md
docs/notes/: temporary-defers.md
docs/plans/: tier-a-next-three-slices-execution-plan.md
examples/: 01-minimal.yaml  02-openrouter-quickstart.yaml  03-csv-seeds.yaml  04-evol-instruct.yaml  05-pdf-grounded.yaml  06-dedup-quality-filter.yaml  07-resume-debug.yaml  08-privacy-guardrails.yaml  README.md  state.db
examples/future/: README.md  contamination-audit.yaml  multi-judge.yaml  preference-pairs.yaml
examples/seeds/: 03-python-qa.csv  04-coding-seeds.csv  07-humanizer-rewrite.jsonl  08-privacy-seeds.jsonl
examples/simula/: 00-baseline.yaml
rubrics/: sft_quality.yaml
scripts/: validate_examples.py
src/arka/: __init__.py  analyze.py  cli.py  examples_validation.py
tests/unit/: test_cli.py  (+39 more)
(+155 files in other folders)
